# dockerfiles

./: .dockerignore  .editorconfig  .env  .gitignore  .gitlab-ci.yml  .travis.yml  DEV.md  LICENSE  Makefile  README.md  base.just  build.mk  build.sh  justfile  package.json  prettier.config.js  tsconfig.json
.bin/: update-dockerhub-description.sh
.build/: archs.sh  init.sh
alpine-build/: Dockerfile
alpine-image-builder/: build.sh
ansible/: Dockerfile
apacheds/: Dockerfile  README.md  entrypoint.sh
app/: Makefile  README.md  build.sh  docker-bake.hcl
arangodb/: Dockerfile
asterisk/: build.sh
autossh/: Dockerfile  README.md  entrypoint.sh
base/: Dockerfile  Makefile  README.md  build.sh  docker-bake.hcl  manifest.json  mirrors.sh
builder/: Dockerfile  Makefile  docker-bake.hcl
bun/: Makefile  docker-bake.hcl
caddy/: Makefile  README.md  build.sh  docker-bake.hcl
chromium/: Dockerfile  Makefile  README.md  docker-bake.hcl
clash/: Dockerfile  build.sh
coding-net/: Makefile
coding-net-worker/: Makefile
continue-server/: Dockerfile  Makefile  docker-bake.hcl
dante/: Makefile  README.md  build.sh  docker-bake.hcl
debian/: Dockerfile  Makefile  README.md  build.sh  docker-bake.hcl
dns/: Dockerfile
dnscrypt/: Dockerfile
dnsmasq/: Makefile  docker-bake.hcl
docker/: Dockerfile  Makefile  docker-bake.hcl
dokku-ci/: Dockerfile
edge/: Dockerfile  build.sh
frp/: Makefile  README.md  (+2 more)
ml/surya-ocr/: Dockerfile  Makefile  README.md  docker-bake.hcl  main.py  pip.Dockerfile  preload.py  pyproject.toml  requirements.txt  scripts.py
(+394 files in other folders)
